# toggl-invoice-generator

./: .cursorignore  .gitignore  LICENSE  README.md  example.config.toml  generate_mock_invoice.py  mock.config.toml  pyproject.toml
src/toggl_invoice_generator/: __main__.py  analyze.py  config.py  invoice.py  toggl.py
